# NeuroSpark

./: .dockerignore  .gitignore  API_ENDPOINTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAN.md  Dockerfile  Dockerfile.test  MEMORY_BANK.md  MIGRATION_PROGRESS.md  README.md  SWAGGER_DOCUMENTATION.md  SYNTHETIC_DATA_CHANGE.md  complex_test.py  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  migration_status.txt  pyproject.toml  pytest.ini  run_tests.sh  setup.py  setup.sh  simple_test.py  start.sh  start_dev.sh  stop.sh  test_api.py  test_db_connection.py
app/: __init__.py  analysis_routes.py  blockchain_routes.py  config.py  data_generator.py  graph_routes.py  kqml_handler.py  main.py  models.py  query_routes.py  routes.py  websocket_handler.py
app/analysis/: __init__.py  network_analysis.py
app/blockchain/: __init__.py
app/blockchain/connectors/: __init__.py  base.py  ethereum.py
app/blockchain/models/: __init__.py  contract.py  event.py  transaction.py  wallet.py
app/database/: __init__.py  base.py  memory_db.py  neo4j_db.py
app/database/arango/: __init__.py  connection.py  database.py
app/database/arango/operations/: __init__.py  alert.py  base.py  contract.py  event.py  legacy.py  network.py  transaction.py  wallet.py
app/database/core/: connection.py  database.py
app/database/models/: agent.py  base.py  interaction.py  message.py  run.py
app/database/operations/: agents.py  interactions.py  messages.py  network.py  runs.py
app/monitoring/: logging_config.py  metrics.py
app/risk/: __init__.py
app/risk/scoring/: __init__.py  core.py
examples/: network_analysis_demo.py
monitoring/: metrics.py
monitoring/filebeat/: filebeat.yml
monitoring/grafana/dashboards/: kqml_dashboard.json
monitoring/prometheus/: prometheus.yml
tests/: conftest.py  test_analysis.py  test_analysis_integration.py  test_blockchain_routes.py  test_clear_database.py  test_data_generator.py  test_database.py  test_generate.py  test_interaction_handler.py  test_interactions.py  test_kqml_handler.py  test_logging.py  test_main.py  test_monitoring.py  test_websocket.py
tests/arango_tests/: __init__.py  test_arango_database.py
tests/blockchain/: test_blockchain_models.py  test_ethereum_connector.py  test_ethereum_integration.py
