[project]
name = "kqml-parser-backend"
version = "0.2.1"
description = "Multi-Agent Graph Intelligence System - Backend"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi>=0.68.0,<0.69.0",
    "uvicorn>=0.15.0,<0.16.0",
    "neo4j>=5.12.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0,<2.0.0",
    "pytz>=2021.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.18.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]