[project]
name = "agent-interaction-backend"
version = "0.8.2"
description = "Multi-Agent Graph Intelligence System with ArangoDB - Backend"

[tool.poetry]
name = "agent-interaction-backend"
version = "0.8.2"
description = "Multi-Agent Graph Intelligence System with ArangoDB - Backend"
authors = ["Jt Perez-Acle jtperez.acle@gmail.com"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
fastapi = ">=0.68.0,<0.69.0"
uvicorn = ">=0.15.0,<0.16.0"
python-dotenv = ">=0.19.0"
pydantic = ">=1.8.0,<2.0.0"
pytz = ">=2021.1"
loguru = ">=0.7.2,<0.8.0"
prometheus-client = ">=0.19.0"
prometheus-fastapi-instrumentator = ">=6.1.0"
python-arango = ">=7.9.0"
networkx = ">=3.0"
pandas = ">=2.0.0"
matplotlib = ">=3.5.0"
scikit-learn = ">=1.0.0"
python-louvain = ">=0.16"
# We no longer need Neo4j as we've migrated to ArangoDB

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.18.0"
pytest-cov = ">=4.0.0"
httpx = ">=0.24.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]